Correct bug in album width on mobile devices

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -102,7 +102,7 @@ html, body {
 }
 
 .album {
-  width: 65vw;
+  width: 75%;
   height: fit-content;
   border-radius: 8px;
 
